--- a/index.html
+++ b/index.html
@@ -1,56 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>GSAP</title>
-    <link rel="stylesheet" href="./style.css">
-</head>
+    <link rel="stylesheet" href="./style.css" />
+  </head>
 
-<body>
+  <body>
     <div class="page1">
-        <div class="box"></div>
+      <div class="box"></div>
     </div>
     <div class="page2">
-        <div class="box"></div>
+      <div class="box"></div>
     </div>
     <div class="page3">
-        <div class="box"></div>
+      <div class="box"></div>
     </div>
     <div class="page4">
-        <div class="box"></div>
+      <div class="box"></div>
     </div>
     <div class="page5">
-        <h1>ScrollAnimation</h1>
+      <h1>ScrollAnimation</h1>
     </div>
     <div class="page6">
-        <div class="svg-wrapper">
-            <svg width="1000" height="400" xmlns="http://www.w3.org/2000/svg">
-                <path d="M 10 100 Q 500 100 990 100" stroke="white" fill="transparent" />
-            </svg>
-        </div>
-
+      <div class="svg-wrapper">
+        <svg width="1000" height="400" xmlns="http://www.w3.org/2000/svg">
+          <path
+            d="M 10 100 Q 500 100 990 100"
+            stroke="white"
+            fill="transparent"
+          />
+        </svg>
+      </div>
     </div>
+    <!-- custom cursor -->
+    <div class="custom_cursor"></div>
     <div class="page7">
-        <div class="custom_cursor"></div>
-        <div class="img_box">
-
-            <div class="img">
-                <!-- <div class="img_overlay"></div> -->
-                <img src="https://images.unsplash.com/photo-1520209759809-a9bcb6cb3241?fm=jpg&q=60&w=3000&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8aW1nfGVufDB8fDB8fHww"
-                    alt="">
-            </div>
+      <div class="img_box">
+        <div class="img">
+        <div class="img_overlay"></div>
+          <img
+            src="https://images.unsplash.com/photo-1520209759809-a9bcb6cb3241?fm=jpg&q=60&w=3000&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8aW1nfGVufDB8fDB8fHww"
+            alt=""
+          />
         </div>
+      </div>
     </div>
-
-
-
-
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.13.0/gsap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.13.0/dist/ScrollTrigger.min.js"></script>
     <script src="./main.js"></script>
-</body>
-
+  </body>
 </html>
