--- a/index.html
+++ b/index.html
@@ -25,13 +25,25 @@
         <h1>ScrollAnimation</h1>
     </div>
     <div class="page6">
-       <div class="svg-wrapper">
-         <svg width="1000" height="400" xmlns="http://www.w3.org/2000/svg">
-            <path d="M 10 100 Q 500 100 990 100" stroke="white" fill="transparent" />
-        </svg>
-       </div>
+        <div class="svg-wrapper">
+            <svg width="1000" height="400" xmlns="http://www.w3.org/2000/svg">
+                <path d="M 10 100 Q 500 100 990 100" stroke="white" fill="transparent" />
+            </svg>
+        </div>
 
     </div>
+    <div class="page7">
+        <div class="custom_cursor"></div>
+        <div class="img_box">
+
+            <div class="img">
+                <!-- <div class="img_overlay"></div> -->
+                <img src="https://images.unsplash.com/photo-1520209759809-a9bcb6cb3241?fm=jpg&q=60&w=3000&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8aW1nfGVufDB8fDB8fHww"
+                    alt="">
+            </div>
+        </div>
+    </div>
+
 
 
 
